Ran PMD code checks  - mostly added final modifiersto methods
- sorted members
- reformatted
- some small code changes