@@ -7,18 +7,12 @@ package org.hhu.c2c.openlr.geo;
  * @version %I%, %G%
  * 
  */
-public class CoordinateFactory {
-	
+public final class CoordinateFactory {
+
 	/**
 	 * Holds the singleton instance
 	 */
 	private static CoordinateFactory instance = new CoordinateFactory();
-
-	/**
-	 * Private constructor to prohibit instantiation of this class
-	 */
-	private CoordinateFactory() {
-	}
 
 	/**
 	 * Returns the singleton instance
@@ -30,48 +24,52 @@ public class CoordinateFactory {
 	}
 
 	/**
+	 * Private constructor to prohibit instantiation of this class
+	 */
+	private CoordinateFactory() {
+	}
+
+	/**
 	 * Creates a new {@link Coordinate} from the given byte array
 	 * 
-	 * @param b
+	 * @param coordinate
 	 *            a byte array of the length of six
 	 * @return a new coordinate
 	 * @throws IllegalArgumentException
 	 *             if the array is malformed, not containing six bytes
 	 */
-	public Coordinate getCoordinate(byte[] b) {
-		if (b.length != 6)
+	public Coordinate getCoordinate(final byte[] coordinate) {
+		if (coordinate.length != 6) {
 			throw new IllegalArgumentException(
 					"The byte array must have a length of 6");
+		}
+
 		return new Coordinate(CoordinateUtils
-				.getFloatRepresentation(getLongitude(b)), CoordinateUtils
-				.getFloatRepresentation(getLatitude(b)));
-
-		// TODO move getFloatRepresentation to this class
-	}
-
-	/**
-	 * Returns the longitude value with the given byte array
-	 * 
-	 * @param b
-	 *            a byte array
-	 * @returny the longitude value
-	 */
-	private long getLongitude(byte[] b) {
-		return new Long((new Long(b[0]).longValue() << 16)
-				+ (new Long(b[1]).longValue() << 8)
-				+ (new Long(b[2]).longValue()));
+				.getFloatRepresentation(getLongitude(coordinate)),
+				CoordinateUtils.getFloatRepresentation(getLatitude(coordinate)));
 	}
 
 	/**
 	 * Returns the latitude value with the given byte array
 	 * 
-	 * @param b
+	 * @param latitude
 	 *            a byte array
 	 * @returny the latitude value
 	 */
-	private long getLatitude(byte[] b) {
-		return new Long((new Long(b[3]).longValue() << 16)
-				+ (new Long(b[4]).longValue() << 8)
-				+ (new Long(b[5]).longValue()));
+	private long getLatitude(final byte[] latitude) {
+		return Long.valueOf(Long.valueOf(latitude[3]) << 16 + Long
+				.valueOf(latitude[4]) << 8 + Long.valueOf(latitude[5]));
+	}
+
+	/**
+	 * Returns the longitude value with the given byte array
+	 * 
+	 * @param longitude
+	 *            a byte array
+	 * @returny the longitude value
+	 */
+	private long getLongitude(final byte[] longitude) {
+		return Long.valueOf(Long.valueOf(longitude[0]) << 16 + Long
+				.valueOf(longitude[1]) << 8 + Long.valueOf(longitude[2]));
 	}
 }
